# cone_obstacle_detection

./: .gitignore
docs/: requirements.txt
src/dynamic_cone/: package.xml  setup.cfg  setup.py
src/dynamic_cone/dynamic_cone/: dynamic_cone.py
src/usb_cam/src/: usb_cam_node.cpp
src/yolotl_ros2/: package.xml  setup.cfg  setup.py
src/yolotl_ros2/config/: bev_params_7.npz  bev_params_manual.npz  bev_params_y_5.npz
src/yolotl_ros2/yolotl_ros2/: basic_result.py  bev_params_manual.npz  create_bev_video.py  create_realtime_bev_video_dual_record.py  demo_with_ros2.py  selected_bev_src_points_manual.txt
src/yolotl_ros2/yolotl_ros2/utils/: bev_utils_auto.py  bev_utils_manual.py  bev_utils_y_auto.py  camera_calibration.py  check_camer_port.py  gpu_ckeck.py  selected_bev_src_points_7.txt  selected_bev_src_points_manual.txt  utils.py
