<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dynamic_cone</name>
  <version>0.0.0</version>
  <description>Dynamic Cone Detection Package</description>
  <maintainer email="kuzdx8035@gmail.com">kuzdx</maintainer>
  <license>TODO: License declaration</license>

  <!-- 의존성 추가 -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>ament_index_python</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
